--- a/popup/popup.css
+++ b/popup/popup.css
@@ -2,51 +2,79 @@ body {
   font-family: Arial, sans-serif;
   margin: 10px;
   padding: 0;
-  text-align: center; /* Centralizar todos os elementos */
+  text-align: center;
 }
 
 h1 {
   font-size: 24px;
   margin-bottom: 20px;
-  text-align: center; /* Centralizar o título */
-  font-weight: bold; /* Destacar o título */
+  font-weight: bold;
   color: #333;
 }
 
 .section {
-  margin-bottom: 15px;
-  text-align: left; /* Deixar as seções alinhadas à esquerda */
-}
-
-label {
-  font-weight: bold;
-  display: block;
-  margin-bottom: 5px;
+  margin-bottom: 20px;
   text-align: left;
 }
 
-#blockToggle {
-  width: 20px;
-  height: 20px;
-  margin-left: 10px;
+h2 {
+  font-size: 16px;
+  margin-bottom: 10px;
+  color: #555;
+  text-align: center;
 }
 
-#status {
+#customDomainsSection,
+#defaultTrackersList {
   border: 1px solid #ccc;
   padding: 10px;
-  background-color: #f9f9f9;
   border-radius: 5px;
-  max-height: 200px;
+  background-color: #f9f9f9;
+}
+
+#customDomainInput {
+  width: calc(100% - 22px);
+  padding: 5px;
+  margin-bottom: 10px;
+  font-size: 14px;
+}
+
+.button-group {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 10px;
+}
+
+button {
+  flex: 1;
+  margin: 0 5px;
+  padding: 5px;
+  font-size: 14px;
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  border-radius: 3px;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: #0056b3;
+}
+
+#customDomainsList,
+#defaultTrackersList {
+  max-height: 100px;
   overflow-y: auto;
-  text-align: left; /* Alinhar texto da lista à esquerda */
+  padding: 0;
+  list-style: none;
 }
 
-ul {
-  padding-left: 20px;
-  text-align: left; /* Alinhar itens da lista à esquerda */
-}
-
-li {
-  list-style-type: disc;
-  margin-left: 10px;
+#customDomainsList li,
+#defaultTrackersList li {
+  font-size: 14px;
+  margin: 5px 0;
+  padding: 5px;
+  border: 1px solid #ccc;
+  background-color: #fff;
+  border-radius: 3px;
 }
