--- a/popup/popup.css
+++ b/popup/popup.css
@@ -3,6 +3,7 @@ body {
   margin: 10px;
   padding: 0;
   text-align: center;
+  background-color: #f5f5f5;
 }
 
 h1 {
@@ -12,11 +13,6 @@ h1 {
   color: #333;
 }
 
-.section {
-  margin-bottom: 20px;
-  text-align: left;
-}
-
 h2 {
   font-size: 16px;
   margin-bottom: 10px;
@@ -24,12 +20,13 @@ h2 {
   text-align: center;
 }
 
-#customDomainsSection,
-#defaultTrackersList {
-  border: 1px solid #ccc;
+/* Estilo padrão para as seções */
+.boxed-section {
+  border: 1.5px solid #bbb;
   padding: 10px;
   border-radius: 5px;
-  background-color: #f9f9f9;
+  background-color: #eaeaea;
+  margin-bottom: 15px;
 }
 
 #customDomainInput {
@@ -55,26 +52,40 @@ button {
   border: none;
   border-radius: 3px;
   cursor: pointer;
+  transition: background-color 0.3s;
 }
 
 button:hover {
   background-color: #0056b3;
 }
 
-#customDomainsList,
-#defaultTrackersList {
-  max-height: 100px;
-  overflow-y: auto;
-  padding: 0;
-  list-style: none;
+button:active {
+  background-color: #004080;
 }
 
-#customDomainsList li,
-#defaultTrackersList li {
+ul {
+  list-style: none;
+  padding: 0;
+  max-height: 120px;
+  overflow-y: auto;
+  text-align: left;
+}
+
+ul li {
   font-size: 14px;
   margin: 5px 0;
   padding: 5px;
   border: 1px solid #ccc;
   background-color: #fff;
   border-radius: 3px;
+}
+
+#status {
+  border: 1px solid #ccc;
+  padding: 10px;
+  background-color: #f9f9f9;
+  border-radius: 5px;
+  max-height: 150px;
+  overflow-y: auto;
+  text-align: left;
 }
